# simval

./: .gitignore  AGENTS.md  AUDIT.md  CITATION.cff  Dockerfile.simval  PLAN.md  README.md  pyproject.toml
.forgejo/workflows/: test.yml
examples/: agent_oracle_demo.py
examples/diffusion/heat/: diffusion.json
examples/em/wave/: em.json
examples/fep/synthetic/: dhdl.csv  fep.json
examples/fluid/flow/: fluid.json
examples/kinetics/reaction/: kinetics.json
examples/nbody/two_body/: provenance.json  system.json
examples/openmm_lysozyme/: methods.json
examples/qc/bell/: circuit.json
examples/qc/h2/: molecule.json
examples/quantum/spin/: quantum.json
examples/relativistic/particle/: relativistic.json
examples/trialanine/: run.py
examples/wave/pulse/: wave.json
pipeline/: Dockerfile  ions.mdp  minim.mdp  nvt.mdp  run.sh
runs/simval_run_demo/: methods.json  provenance.json
src/simval/: __init__.py  _util.py  afold.py  cli.py  compare.py  context.py  diffusion.py  em.py  fep.py  fetch.py  fixtures.py  fluid.py  freesolv.py  io.py  kinetics.py  manifest.py  mdrun.py  metadata.py  nbody.py  omex.py  pipeline.py  pyscf_eng.py  qiskit_eng.py  quantum.py  relativistic.py  result.py  service.py  sweep.py  thresholds.py  units.py  viz.py  wave.py  web.py
src/simval/diagnostics/: energy.py  equilibration.py  ff_coverage.py  hbonds.py  params.py  prep.py  rmsd.py  rmsf.py
src/simval/oracle/: __init__.py  cases.py  validate.py
src/simval/oracle/references/: adk_morph.json  bell_state.json  benzene_hydration_fep.json  diffusion_heat.json  em_pulse_stable.json  fep_synthetic.json  fluid_flow_stable.json  h2_rhf.json  kepler_two_body.json  kinetics_reaction.json  lysozyme_nvt_30ps.json  lysozyme_openmm.json  quantum_spin.json  relativistic_boris.json  wave_pulse_stable.json
tests/: test_afold.py  test_cli.py  test_cli_commands.py  test_cli_real.py  test_compare.py  test_em_quantum.py  test_energy.py  test_equilibration.py  test_export.py  test_fep.py  test_fetch.py  test_ff_coverage.py  test_fluid.py  test_freesolv.py  test_freesolv_ci.py  test_hbonds.py  test_io.py  test_manifest.py  test_md_multiformat.py  test_metadata.py  test_nbody.py  test_oracle.py  test_params.py  test_perf.py  test_prep.py  test_pyscf_eng.py  test_qiskit_eng.py  test_rmsd.py  test_rmsf.py  test_service.py  test_sweep.py  test_thresholds.py  test_units.py  test_viz.py  test_wave.py  test_web.py
