[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "simval"
version = "0.0.1"
description = "Deterministic verification layer for molecular dynamics (working name; see PLAN D6)"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.scripts]
simval = "simval.cli:main"
simval-web = "simval.web:run"

[project.optional-dependencies]
dev = ["pytest>=7", "httpx>=0.26"]
gromacs = ["MDAnalysis>=2.7"]
nbody = ["rebound>=3.27"]
web = ["fastapi>=0.110", "uvicorn>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]
