[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "simval"
version = "0.1.0"
description = "Deterministic verification + reference-oracle for computational physics (MD, N-body, waves). Local-first, LLM-free core."
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.scripts]
simval = "simval.cli:main"
simval-web = "simval.web:run"

[project.optional-dependencies]
dev = ["pytest>=7", "httpx>=0.26", "MDAnalysisTests>=2.7"]
gromacs = ["MDAnalysis>=2.7"]
openmm = ["openmm>=8.5", "pdbfixer>=1.9"]
nbody = ["rebound>=3.27"]
web = ["fastapi>=0.110", "uvicorn>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:MDAnalysis.*",
    "ignore::UserWarning:MDAnalysis.*",
    "ignore::numpy.exceptions.VisibleDeprecationWarning",
]
