[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "simval"
version = "0.1.0"
description = "Deterministic verification + reference-oracle for computational physics (MD, N-body, waves, fluids, EM, quantum). Local-first, LLM-free core."
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Software Development :: Testing",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]

[project.urls]
Homepage = "http://100.108.123.49:49152/Tyler/omnilator"
Repository = "http://100.108.123.49:49152/Tyler/omnilator"
Issues = "http://100.108.123.49:49152/Tyler/omnilator/issues"

[project.scripts]
simval = "simval.cli:main"
simval-web = "simval.web:run"

[project.optional-dependencies]
md = ["MDAnalysis>=2.7"]
fep = ["alchemlyb>=2.0", "pymbar>=4.0"]
nbody = ["rebound>=3.27"]
qc = ["pyscf>=2.4"]
quantum = ["qiskit>=1.0", "qiskit-aer>=0.14"]
openmm = ["openmm>=8.5", "pdbfixer>=1.9"]
web = ["fastapi>=0.110", "uvicorn>=0.27"]
dev = ["pytest>=7", "httpx>=0.26", "MDAnalysisTests>=2.7", "ruff>=0.5"]
all = ["MDAnalysis>=2.7", "alchemlyb>=2.0", "pymbar>=4.0", "rebound>=3.27", "pyscf>=2.4", "qiskit>=1.0", "qiskit-aer>=0.14", "openmm>=8.5", "pdbfixer>=1.9", "fastapi>=0.110", "uvicorn>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:MDAnalysis.*",
    "ignore::UserWarning:MDAnalysis.*",
    "ignore::numpy.exceptions.VisibleDeprecationWarning",
]
